--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Show Source
       <div class="mdl-layout-spacer"></div>
       <nav class="mdl-navigation">
           
-              <a  class="mdl-navigation__link" href="https://https://IVIA-AF/ivia-af.github.io/deply-demo.pdf">
+              <a  class="mdl-navigation__link" href="https://github.com/IVIA-AF/ivia-af.github.io/raw/main/deply-demo.pdf">
                   <i class="fas fa-file-pdf"></i>
                   PDF
               </a>
