--- a/search.html
+++ b/search.html
@@ -24,6 +24,7 @@
     <script src="_static/doctools.js"></script>
     <script src="_static/sphinx_highlight.js"></script>
     <script src="_static/d2l.js"></script>
+    <link rel="shortcut icon" href="_static/favicon.jpeg"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="#" />
   <script type="text/javascript" src="_static/searchtools.js "></script>
